[gd_scene load_steps=4 format=3 uid="uid://duhnj0hy56kkh"]

[ext_resource type="Script" uid="uid://katocsapg1ht" path="res://game.gd" id="1_80nbo"]
[ext_resource type="PackedScene" uid="uid://cwliuq1qo2mpa" path="res://morse_receiver.tscn" id="2_e2o6t"]
[ext_resource type="PackedScene" uid="uid://c5np808a7uc7b" path="res://morse_encoder.tscn" id="3_feb5d"]

[node name="Game" type="Node2D"]
script = ExtResource("1_80nbo")

[node name="MorseReceiver" parent="." instance=ExtResource("2_e2o6t")]
position = Vector2(10, 444)

[node name="MorseEncoder" parent="." instance=ExtResource("3_feb5d")]

[node name="Score" type="Label" parent="."]
offset_left = 743.0
offset_top = 373.0
offset_right = 931.0
offset_bottom = 461.0
theme_override_font_sizes/font_size = 64
text = "Score: 0"

[connection signal="confirm_pressed" from="MorseReceiver" to="." method="_confirm_input_message"]
